fix: adjust header logo on small screens

--- a/css/header.css
+++ b/css/header.css
@@ -319,3 +319,19 @@
     border-radius: 0 var(--radius-small) var(--radius-small) 0;
   }
 }
+@media (max-width: 375px) {
+  .header__logo {
+    width: 86px;
+    height: auto;
+    align-self: center;
+  }
+
+  .header__logo-img {
+    width: 100%;
+    height: auto;
+  }
+
+  .header__container {
+    align-items: center;
+  }
+}
